# lark-helper-mcp

./: .env.example  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.local.json
src/lark_helper_mcp/: config.py  server.py
